# idkmybffjill

./: README.md  setup.cfg
idkmybffjill/: emoji_table.py  idkmybffjill.py
