[metadata]
name = idkmybffjill
author = Liam Middlebrook
author-email = liammiddlebrook@gmail.com
summary = Emoji radar chart sentiment.
url = "https://github.com/liam-middlebrook/missing-license"
description-file = README.md
license = GPLv3+
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
keywords =
    emoji
[files]
packages =
    idkmybffjill
[entry_points]
console_scripts =
    idkmybffjill = idkmybffjill:serve
